Enable generation of mnemonics of different strengths/word lengths

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,6 +28,10 @@ $body-background-color: #f9f9f9cc;
   margin-bottom: 15px;
 }
 
+.main-content {
+  min-height: 400px;
+}
+
 // Import Bulma and Buefy styles
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
