Refactor. Extracted crypto methods into helpers, standardize ui for tables, fix vue errors

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,6 +28,14 @@ $body-background-color: #f9f9f9cc;
   margin-bottom: 15px;
 }
 
+.spacer-top-lg {
+  margin-top: 40px;
+}
+
+ .spacer-top-md {
+  margin-top: 20px;
+}
+
 .main-content {
   min-height: 400px;
 }
